kustomize/workload-multus-sba/network-instance-405-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: multus-sba-405-network-instance-leaf1
  labels:
    target: leaf1
spec:
  network-instance:
  - name: multus-ipvrf-itfce-405
    type: ip-vrf
    admin-state: enable
    description: paco-multus-ipvrf-itfce-405
    interface:
    - name: ethernet-1/50.405
    - name: irb0.401
    - name: irb0.402
    vxlan-interface:
    - name: vxlan0.405
