kustomize/workload-multus-sba/network-instance-protocol-bgpevpn402-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-sba-402-protocolbgpevpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-macvrf-sriov-402
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 402
      vxlan-interface: vxlan0.402
