kustomize/workload-multus-sba/network-instance-protocol-bgpvpn401-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-sba-401-protocolbgpvpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-sbamacvrfipvlan401
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:401
        import-rt: target:65002:401
