kustomize/workload-multus-sba/network-instance-protocol-bgpvpn403-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-sba-403-protocolbgpvpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-sriov-403
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:403
        import-rt: target:65002:403
