kustomize/workload-multus-sba/network-instance-protocol-linux401-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-sba-401-protocollinux-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-sbamacvrfipvlan401
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
