kustomize/workload-multus-sba/network-instance-protocol-linux401-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-sba-401-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-ipvlan-401
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
