kustomize/workload-multus-sba/network-instance-protocol-linux402-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-sba-402-protocollinux-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-sbamacvrfsriov1402
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
