kustomize/workload-multus-sba/network-instance-protocol-linux403-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-sba-403-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-sbamacvrfsriov2403
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
