kustomize/workload-multus-sba/network-instance-protocol-linux405-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-sba-405-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-ipvrf-itfce-405
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
